Added single list, stack and queues, add, remove and list

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(Tarea_1)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(Tarea_1 main.cpp)
+add_executable(Tarea_1 main.cpp nodoS.cpp nodoS.h listaSimple.cpp listaSimple.h cola.cpp cola.h pila.cpp pila.h)
